Removing more files

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,17 +1,37 @@
 ---
-rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
-rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
-schulich.png: schulich-39efed07c62f2ac965bf91f66cb5b300.png
-schulich/index.png: schulich-39efed07c62f2ac965bf91f66cb5b300.png
-western.png: western-d4cb2f1095dfd3bc50f76b1bb3d51590.png
-western/index.png: western-d4cb2f1095dfd3bc50f76b1bb3d51590.png
-application.js: application-a4e5781b398195da905191a092920ee0.js
-application/index.js: application-a4e5781b398195da905191a092920ee0.js
-application.css: application-2ebc47645d0dbfab2f51683f4383f139.css
-application/index.css: application-2ebc47645d0dbfab2f51683f4383f139.css
-jquery.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
-jquery/index.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
-glyphicons-halflings-white.png: glyphicons-halflings-white-8ac3343118cca6cf1f3e12ad853744e4.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white-8ac3343118cca6cf1f3e12ad853744e4.png
-glyphicons-halflings.png: glyphicons-halflings-12c6d53e0df86990c36bd37dbd53b132.png
-glyphicons-halflings/index.png: glyphicons-halflings-12c6d53e0df86990c36bd37dbd53b132.png
+LICENSE.txt: LICENSE.txt
+LICENSE/index.txt: LICENSE.txt
+Material-Design-Icons.eot: Material-Design-Icons.eot
+Material-Design-Icons/index.eot: Material-Design-Icons.eot
+Material-Design-Icons.svg: Material-Design-Icons.svg
+Material-Design-Icons/index.svg: Material-Design-Icons.svg
+Material-Design-Icons.ttf: Material-Design-Icons.ttf
+Material-Design-Icons/index.ttf: Material-Design-Icons.ttf
+Material-Design-Icons.woff: Material-Design-Icons.woff
+Material-Design-Icons/index.woff: Material-Design-Icons.woff
+schulich.png: schulich.png
+schulich/index.png: schulich.png
+western.png: western.png
+western/index.png: western.png
+application.js: application.js
+application/index.js: application.js
+application.css: application.css
+application/index.css: application.css
+material-wfont.css.map: material-wfont.css.map
+material-wfont/index.css.map: material-wfont.css.map
+material-wfont.min.css.map: material-wfont.min.css.map
+material-wfont/index.min.css.map: material-wfont.min.css.map
+material.css.map: material.css.map
+material/index.css.map: material.css.map
+material.min.css.map: material.min.css.map
+material/index.min.css.map: material.min.css.map
+ripples.css.map: ripples.css.map
+ripples/index.css.map: ripples.css.map
+ripples.min.css.map: ripples.min.css.map
+ripples/index.min.css.map: ripples.min.css.map
+jquery.min.map: jquery.min.map
+jquery/index.min.map: jquery.min.map
+glyphicons-halflings-white.png: glyphicons-halflings-white.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white.png
+glyphicons-halflings.png: glyphicons-halflings.png
+glyphicons-halflings/index.png: glyphicons-halflings.png
