--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,37 +1,25 @@
 ---
-LICENSE.txt: LICENSE.txt
-LICENSE/index.txt: LICENSE.txt
-Material-Design-Icons.eot: Material-Design-Icons.eot
-Material-Design-Icons/index.eot: Material-Design-Icons.eot
-Material-Design-Icons.svg: Material-Design-Icons.svg
-Material-Design-Icons/index.svg: Material-Design-Icons.svg
-Material-Design-Icons.ttf: Material-Design-Icons.ttf
-Material-Design-Icons/index.ttf: Material-Design-Icons.ttf
-Material-Design-Icons.woff: Material-Design-Icons.woff
-Material-Design-Icons/index.woff: Material-Design-Icons.woff
-schulich.png: schulich.png
-schulich/index.png: schulich.png
-western.png: western.png
-western/index.png: western.png
-application.js: application.js
-application/index.js: application.js
-application.css: application.css
-application/index.css: application.css
-material-wfont.css.map: material-wfont.css.map
-material-wfont/index.css.map: material-wfont.css.map
-material-wfont.min.css.map: material-wfont.min.css.map
-material-wfont/index.min.css.map: material-wfont.min.css.map
-material.css.map: material.css.map
-material/index.css.map: material.css.map
-material.min.css.map: material.min.css.map
-material/index.min.css.map: material.min.css.map
-ripples.css.map: ripples.css.map
-ripples/index.css.map: ripples.css.map
-ripples.min.css.map: ripples.min.css.map
-ripples/index.min.css.map: ripples.min.css.map
-jquery.min.map: jquery.min.map
-jquery/index.min.map: jquery.min.map
-glyphicons-halflings-white.png: glyphicons-halflings-white.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white.png
-glyphicons-halflings.png: glyphicons-halflings.png
-glyphicons-halflings/index.png: glyphicons-halflings.png
+LICENSE.txt: LICENSE-4517a31f8560b3de7a7ac2d2d8c8edc7.txt
+LICENSE/index.txt: LICENSE-4517a31f8560b3de7a7ac2d2d8c8edc7.txt
+Material-Design-Icons.eot: Material-Design-Icons-1aa3879f6bb3100b9e114a361e1b1c47.eot
+Material-Design-Icons/index.eot: Material-Design-Icons-1aa3879f6bb3100b9e114a361e1b1c47.eot
+Material-Design-Icons.svg: Material-Design-Icons-143f376f5d7cee2d4d6178efc610aadc.svg
+Material-Design-Icons/index.svg: Material-Design-Icons-143f376f5d7cee2d4d6178efc610aadc.svg
+Material-Design-Icons.ttf: Material-Design-Icons-9174534be9510160590898fdab438003.ttf
+Material-Design-Icons/index.ttf: Material-Design-Icons-9174534be9510160590898fdab438003.ttf
+Material-Design-Icons.woff: Material-Design-Icons-52a0181fc5170c80ed3349bac8bf725b.woff
+Material-Design-Icons/index.woff: Material-Design-Icons-52a0181fc5170c80ed3349bac8bf725b.woff
+schulich.png: schulich-ebea3fff4431ec7a3a660be5abead7aa.png
+schulich/index.png: schulich-ebea3fff4431ec7a3a660be5abead7aa.png
+western.png: western-5bf12fb3fe22f7fa9defa3fc203473d2.png
+western/index.png: western-5bf12fb3fe22f7fa9defa3fc203473d2.png
+application.js: application-2b4e173ac54c382c1c6579de9c8845d5.js
+application/index.js: application-2b4e173ac54c382c1c6579de9c8845d5.js
+application.css: application-44368b63b40bdc691225af78c24eb80b.css
+application/index.css: application-44368b63b40bdc691225af78c24eb80b.css
+jquery.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
+jquery/index.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
+glyphicons-halflings-white.png: glyphicons-halflings-white-b552fc2a3b051cebf4567afb55de29b0.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-b552fc2a3b051cebf4567afb55de29b0.png
+glyphicons-halflings.png: glyphicons-halflings-b4c22a0ed1f42188864f0046f0862ecb.png
+glyphicons-halflings/index.png: glyphicons-halflings-b4c22a0ed1f42188864f0046f0862ecb.png
